GH-105: add initial excel files processing support
This update includes an initial experimental Excel files reader based on ZeroCell and Apache POI libraries.

Fixes #105